my-app/src/Main.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto:300,400,900');

/* BASELINE */

h1 {
  text-align: left;
  font-family: 'Playfair Display', serif;
  font-weight: 700;
  font-size: 2.0em;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  cursor: pointer;
  margin-top: -1px;
  color: #EA1C44;
}


/* HEADER */

.App {
  text-align: left;
  color: black;

  padding-top: 10px;

  position: fixed;
  height: 100vh;
  width: 100%;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
}

.App-header {
  height: 60vh;
}

.App-header.no-title {
  height: 60px;
}

/* NAVBAR */

.name-box {
  float: left;
  position: relative;
  width: 120px;
  height: 40px;
}

.red-rectangle {
  position: absolute;
  top: -2px;
  width: 8px;
  height: 24px;
  background-color: red;
  float: left;
}

.navbar .my-name {
  position: absolute;
  left: 20px;
  padding: 0;
}

.navbar a {
  padding-left: 45px;
  float: right;

  -webkit-transition: margin 0.3s ease-out;
  -moz-transition: margin 0.3s ease-out;
  -o-transition: margin 0.3s ease-out;
}

.navbar a:hover {
  font-weight: 600;
}

.navbar {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  color: #777;

  width: 100%;
  height: 55px;
  background-color: rgba(255, 255, 255, 0.8);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;

  padding-top: 20px;
  padding-left: 25px;
  padding-right: 25px;
  box-sizing: border-box;
  display: block;
}

@media all and (min-width: 650px) {
  .navbar {
    padding-left: calc((100vw - 600px)/2);
    padding-right: calc((100vw - 600px)/2);;
  }
}

@media all and (min-width: 980px) {
  .navbar {
    padding-left: 190px;
    padding-right: 190px;
  }
}

/* INTRO */
/* TODO: Refactor all of this into Gris.css since that's the only view that uses it */

.intro-wrapper {
  clear: both;
  width: 100%;
  padding-left: 25px;
  padding-right: 25px;
  box-sizing: border-box;
}

@media all and (min-width: 650px) {
  .intro-wrapper {
    padding: 0;
    width: 600px;
    margin: 0 auto;
  }
}

@media all and (min-width: 980px) {
  .intro-wrapper {
    margin-left: 190px;
  }
}

.App-title {
  padding-top: 150px;
}

.App-intro {
  color: #333333;
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
  font-size: 16px;
}

